--- a/module1/index.html
+++ b/module1/index.html
@@ -20,9 +20,9 @@
                 </a>
                 <nav class="header__navigation">
                     <ul class="navigation__items">
-                        <a class="navigation__link" href="#about"><li class="navigation__item">About</li></a>
-                        <a class="navigation__link" href="#footer"><li class="navigation__item">Help</li></a>
-                        <a class="navigation__link" href="#features"><li class="navigation__item">Features</li></a>
+                        <li class="navigation__item"><a class="navigation__link" href="#about">About</a></li> 
+                        <li class="navigation__item"><a class="navigation__link" href="#footer">Help</a></li>
+                        <li class="navigation__item"><a class="navigation__link" href="#features">Features</a></li>
                     </ul>
                 </nav>
             </div>
@@ -38,7 +38,7 @@
                             that has been tested for security, so you can store
                             your data here safely but not be afraid of being stolen by others.
                         </p>
-                        <a href="#features"><button class="about__content-btn">Learn more</button></a>
+                        <a class="about__content-btn" href="#features">Learn more</a>
                     </div>
                     <img class="about__decor-img" src="img//background_about.svg" alt="background img">
                 </div>
